--- a/jentoluNet/css/css.css
+++ b/jentoluNet/css/css.css
@@ -13,9 +13,6 @@
 		color: white;
 	}
 	
-	
-	
-	
 	.btn-push {
   display: inline-block;
   max-width: 300px;
@@ -34,20 +31,6 @@
     transform: translateY(4px);
     border-bottom: none;
 }
-
-
-
-
-
-	
-	
-	
-	
-	
-	
-	
-	
-	
 	
 	
 	/* ここから下がボタンのCSS　*/
@@ -98,8 +81,6 @@
 .btn-animation-02:hover {
   color: #FFF;
 }
-	
-	
 	
 	.aaaiii{
 		text-align: center;
@@ -156,7 +137,8 @@ header{
     left: 0px;                  /* 位置(右0px) */
     width: 100%;                /* 横幅100%　*/
     height: 140px;              /* 縦幅140px */
-	background-image: url("../img/aaa.jpg");
+  background-image: url("../img/aaa.jpg");
+  background-size: cover;
 	z-index: 99
 
 }
