--- a/jentoluNet/css/css.css
+++ b/jentoluNet/css/css.css
@@ -157,7 +157,7 @@ header{
 
 body { margin: 0; } 
 div#slider { overflow: hidden; }
-	div#slider figure img { width: 20%;hight:auto; float: left; }
+	div#slider figure img { width: 20%; height:auto; float: left; }
 div#slider figure { 
   position: relative;
   width: 500%;
@@ -225,7 +225,7 @@ header{
 
 body { margin: 0; } 
 div#slider { overflow: hidden; }
-	div#slider figure img { width: 20%;hight:auto; float: left; }
+	div#slider figure img { width: 20%;height:auto; float: left; }
 div#slider figure { 
   position: relative;
   width: 500%;
@@ -352,4 +352,4 @@ div#slider figure {
 
 
 
-
+}
